--- a/.env
+++ b/.env
@@ -1,19 +1,12 @@
-# Docker Compose
+# Docker Compose configuration
 CONFLUENT_PLATFORM_VERSION="7.6.0"
 PLATFORM="linux/arm64"
-HOST="localhost"
 
-# Kafka Configuration
-KAFKA_CONFIG="config/localhost.ini"
+# Kafka configuration
+KAFKA_CONFIG="config/localhost.yaml"
 
 # Troops configuration
 TROOPS_CONFIG="config/troops.yaml"
-TROOPS_KAFKA_TOPIC="iot_battlefield_troops"
-TROOPS_MOVE_KAFKA_TOPIC="iot_battlefield_troops_moves"
-TROOPS_KAFKA_CLIENT_ID="iot_battlefield_troops"
 
 # Tanks configuration
 TANKS_CONFIG="config/tanks.yaml"
-TANKS_KAFKA_TOPIC="iot_battlefield_tanks"
-TANKS_MOVE_KAFKA_TOPIC="iot_battlefield_tanks_moves"
-TANKS_KAFKA_CLIENT_ID="iot_battlefield_tanks"
