Added Splunk Connector

--- a/.env
+++ b/.env
@@ -1,12 +1,18 @@
 # Docker Compose configuration
 CONFLUENT_PLATFORM_VERSION="7.6.0"
+CONFLUENT_DATAGEN_VERSION="0.6.4"
+SPLUNK_CONNECTOR_ZIP="splunk-kafka-connect-splunk-2.2.1.zip"
+SPLUNK_CONFIG_FILE="config/splunk_hec_sink.json"
 PLATFORM="linux/arm64"
 
 # Kafka configuration
-KAFKA_CONFIG="config/localhost.yaml"
+KAFKA_CONFIG="config/kafka_docker.yaml"
 
 # Troops configuration
 TROOPS_CONFIG="config/troops.yaml"
 
 # Tanks configuration
 TANKS_CONFIG="config/tanks.yaml"
+
+# Bases configuration
+BASES_CONFIG="config/bases.yaml"
