--- a/src/config/tanks.yaml
+++ b/src/config/tanks.yaml
@@ -1,17 +1,18 @@
 # Kafka config
 kafka:
-  client_id: iot_battlefield_troops
-  topic_data: iot_battlefield_troops
-  topic_move: iot_battlefield_troops_moves
+  client_id: iot_battlefield_tanks
+  topic_data: iot_battlefield_tanks
+  topic_move: iot_battlefield_tanks_moves
 
 # Tanks deployment
 deployment:
   number_of_units: 50
-  start_latitude: 50.717469
-  start_longitude: 4.397911
+  start_latitude: 50.67615541
+  start_longitude: 4.40630927
   bearing_angle_min: -5
   bearing_angle_max: 5
   distance_between_units: 20
+  bearing_angle_between_units: -90
   seconds_between_moves: 1
   damage_probability_min: 1
   damage_probability_max: 5
