Added postgres/jdbc connector

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 CONFLUENT_PLATFORM_VERSION="7.6.0"
 CONFLUENT_DATAGEN_VERSION="0.6.4"
 SPLUNK_CONNECTOR_ZIP="splunk-kafka-connect-splunk-2.2.1.zip"
-SPLUNK_CONFIG_FILE="config/splunk_hec_sink.json"
+POSTGRESQL_VERSION=14
+CONFLUENT_JDBC_SINK_VERSION=10.7.6
 PLATFORM="linux/arm64"
 
 # Kafka configuration
