--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ TANKS_CONFIG="config/tanks.yaml"
 
 # Bases configuration
 BASES_CONFIG="config/bases.yaml"
+
+# Front-Line Command (FLC) configuration
+FLC_CONFIG="config/flc.yaml"
