--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -174,6 +174,7 @@ services:
     image: debezium/postgres:$POSTGRESQL_VERSION
     hostname: postgres
     container_name: postgres
+    platform: linux/amd64
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -190,6 +191,7 @@ services:
     image: dpage/pgadmin4:latest
     hostname: pgadmin
     container_name: pgadmin
+    platform: linux/amd64
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.org
       PGADMIN_DEFAULT_PASSWORD: admin
