--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,7 +159,7 @@ services:
         /etc/confluent/docker/run & 
         sleep infinity
 
-# Troops, Tanks and Base emulator
+# Troops, Tanks and FLC emulator
   emulator:
     build: .
     hostname: emulator
