--- a/.env
+++ b/.env
@@ -1,19 +1,25 @@
 # Docker Compose configuration
-CONFLUENT_PLATFORM_VERSION="7.6.0"
-CONFLUENT_DATAGEN_VERSION="0.6.4"
-SPLUNK_CONNECTOR_ZIP="splunk-kafka-connect-splunk-2.2.1.zip"
-POSTGRESQL_VERSION=14
+CONFLUENT_PLATFORM_VERSION=7.6.0
+CONFLUENT_DATAGEN_VERSION=0.6.4
 CONFLUENT_JDBC_SINK_VERSION=10.7.6
-PLATFORM="linux/arm64"
+CONFLUENT_ELASTIC_SINK_VERSION=14.0.14
+KIBANA_VERSION=8.7.0
+ELASTIC_VERSION=8.7.0
+POSTGRESQL_VERSION=14
+SPLUNK_CONNECTOR_ZIP=splunk-kafka-connect-splunk-2.2.1.zip
+PLATFORM=linux/arm64
 
 # Kafka configuration
-KAFKA_CONFIG="config/kafka_docker.yaml"
+KAFKA_CONFIG=config/kafka_docker.yaml
 
 # Troops configuration
-TROOPS_CONFIG="config/troops.yaml"
+TROOPS_CONFIG=config/troops.yaml
 
 # Tanks configuration
-TANKS_CONFIG="config/tanks.yaml"
+TANKS_CONFIG=config/tanks.yaml
 
 # Front-Line Command (FLC) configuration
-FLC_CONFIG="config/flc.yaml"
+FLC_CONFIG=config/flc.yaml
+
+# Kibana COnfiguration
+KIBANA_DASHBOARD=config/kibana_dashboard.ndjson
