--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,6 +156,7 @@ services:
         echo "Installing Connector"
         confluent-hub install --no-prompt /tmp/$SPLUNK_CONNECTOR_ZIP
         confluent-hub install --no-prompt confluentinc/kafka-connect-jdbc:$CONFLUENT_JDBC_SINK_VERSION
+        confluent-hub install --no-prompt confluentinc/kafka-connect-elasticsearch:$CONFLUENT_ELASTIC_SINK_VERSION
         /etc/confluent/docker/run & 
         sleep infinity
 
@@ -202,3 +203,30 @@ services:
     restart: always
     depends_on:
       - postgres
+
+  # Elastic
+  elasticsearch:
+    image: elasticsearch:$ELASTIC_VERSION
+    container_name: elasticsearch
+    restart: always
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ports:
+      - 9200:9200
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+
+  # Kibana
+  kibana:
+    image: kibana:$KIBANA_VERSION
+    container_name: kibana
+    restart: always
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - 5601:5601
+    depends_on:
+      - elasticsearch
