--- a/src/config/kafka_docker.yaml
+++ b/src/config/kafka_docker.yaml
@@ -1,5 +1,12 @@
+#######################
+# Kafka configuration #
+#######################
 kafka:
   bootstrap.servers: broker:9094
 
+
+##################################
+# Schjema Registry configuration #
+##################################
 schema-registry:
   url: http://schema-registry:8081
